fix scrollbar

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,9 @@
 .buttonRow {
   white-space: nowrap;
   overflow: auto;
+
+  margin-bottom: -22px;
+  margin-left: -22px;
+  margin-right: -22px;
+  padding: 22px;
 }
